@@ -48,7 +48,27 @@ repositories {
 
 mainClassName = "de.prob2.ui.ProB2"
 final preloaderClassName = "de.prob2.ui.ProB2Preloader"
-applicationDefaultJvmArgs += ["-Djavafx.preloader=${preloaderClassName}".toString()]
+applicationDefaultJvmArgs += [
+	"-Djavafx.preloader=${preloaderClassName}".toString(),
+]
+
+if (JavaVersion.current().java9Compatible) {
+	applicationDefaultJvmArgs += [
+		// Required by centerdevice-nsmenufx (as of version 2.1.6; see https://github.com/codecentric/NSMenuFX/issues/29)
+		"--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+		"--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+		"--add-opens=javafx.graphics/com.sun.glass.ui.mac=ALL-UNNAMED",
+		"--add-exports=javafx.graphics/com.sun.javafx.menu=ALL-UNNAMED",
+		"--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
+		"--add-opens=javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED",
+		
+		// Required by richtextfx (as of version 0.9.x; planned to be fixed in 0.10, see https://github.com/FXMisc/RichTextFX/issues/776)
+		"--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
+		"--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED",
+		"--add-opens=javafx.graphics/com.sun.javafx.text=ALL-UNNAMED",
+		"--add-opens=javafx.graphics/javafx.scene.text=ALL-UNNAMED",
+	]
+}
 
 tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
